@@ -1,5 +1,12 @@
 2016-07-22  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal.c (e_alloc): Make more generic.
+	(alloc_native): Move native specific code here from e_alloc.
+	* e-hal/src/esim-target.c (alloc_esim): Move esim specific
+	code here from e_alloc.
+
+2016-07-22  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal.c (e_close): Test for native target
 	instead of NOT esim target.
 
